# ruber

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
config/: log4rs.yaml  ruber.template.yaml
src/lib/: agent.rs  config.rs  driving.rs  error.rs  lib.rs  routing.rs
src/lib/driving/: driver.rs  transport.rs
src/lib/driving/transport/: local_transport.rs  remote_transport.rs
src/lib/routing/: credentials.rs  routes.rs  watchers.rs
