[package]
name = "ruber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ruber"
path = "src/bin/main.rs"

[lib]
name = "ruber_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.89"
config = { version = "0.14.0", features = ["yaml"] }
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
