[package]
name = "ruber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ruber"
path = "src/bin/main.rs"

[lib]
name = "ruber_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.89"
async-ssh2-lite = { version = "0.5.0", features = ["tokio"] }
config = { version = "0.14.0", features = ["yaml"] }
infer = "0.16.0"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
